# super-app-citi

./: README.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
app/: _layout.tsx  wallet.tsx  wallet.tsx~
app/(auth)/: ForgotPassword.tsx  Login.tsx  Signup.tsx  index.tsx
app/(tabs)/: Chats.tsx  _layout.tsx  faq.tsx  home.tsx  payments.tsx  profile.tsx  shopping.tsx
app/chats/: [id].tsx  index.tsx
app/shopping/: Cart.tsx  Payment.tsx
app/wallet/: add-money.tsx
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/admin/: router.py  service.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/core/: config.py  database.py  security.py
backend/app/ecommerce/: router.py  service.py
backend/app/kyc/: router.py  service.py
backend/app/models/: ecommerce.py  kyc.py  user.py
backend/app/schemas/: admin.py  auth.py  ecommerce.py  kyc.py  user.py
backend/app/utils/: insert_data_into_mongo.py  kyc_utils.py
backend/backend/data/: faiss_index.faiss  products_data.json
data/: contactsData.ts  shopData.ts
